--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 R_SERVER_URL = http://10.0.2.2:8181
 X_R_SERVER_URL = http://10.0.2.2:8281
-PROCESS_ETA_EP = /api/user/post_sum
+
+PROCESS_ETA_EP = /api/user/post_eta_data
+
 RAND_INT = 50
+
 API_AUDIENCE = https://token-management-api
